Update security configuration to allow proper access to endpoints